# sol_transfer

./: .env  .gitignore  Cargo.toml  notes.txt  readme.md
src/: main.rs
src/models/: mod.rs  transfer.rs
src/routes/: balance.rs  mod.rs  transfer.rs
src/utils/: solana.rs
